--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
        <p>
          
          <p>
-        Details of my role:
+       <h3> Details of my role:
            
   <!-- Add your site or application content here -->
   <p>Hello world! This is my first online resume</p>
