--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" href="icon.png"> -->
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <meta name="theme-color" content="#ffffff">
 </head>
