--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title><h1><!-- Willie's Resume --></h1></title>
+  <title><h1><Willie's Resume></h1></title>
  
   <meta name="description" content="Resume">
   <meta name="viewport" content="width=device-width, initial-scale=1">
