--- a/index.html
+++ b/index.html
@@ -1,34 +1,46 @@
-<!doctype html>
-<html class="no-js" lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>William Osei-Poku's PS Portfolio</title>
-  <meta name="description" content="Placeholder description for William's Resume site">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" href="styles.css">
-
-  <meta name="theme-color" content="#ffffff">
-</head>
-
-<body>
-    <h1>William Osei-Poku</h1>
-    <h2>The Resume of Willliam Osei-Poku</h2>
-    <p>William is a seasoned Product Owner with 20 years of experience.</p>
-
-    <ol>
-        <li>Open GitHub</li>
-        <li class="blue">Open your repository</li>
-        <li class="blue">My email goes here</li>
-    </ol>
-
-    <ul>
-        <li class="blue">Hello</li>
-        <li class="blue">Who</li>
-        <li class="blue">Are</li>
-        <li class="blue">You?</li>
-    </ul>
-</body>
-
-</html>
+<div id="header"></div>
+<div class="left"></div>
+<div class="stuff">
+  <br><br>
+  <h1>William</h1>
+  <h2>Osei-Poku</h2>
+  <hr />
+  <br>
+  <p class="head">Interests</p>
+  <ul>
+    <li>Reading</li>
+    <li>Photography</li>
+    <li>Gaming</li>
+    <li>Product Development</li>
+    <li>Technology</li>
+  </ul>
+  <p class="head">Skills</p>
+  <ul>
+    <li>Web Design with HTML & CSS</li>
+  </ul>
+  <p class="head">Education</p>
+  <ul>
+    <a href="">
+      <li>Drexel University</li>
+    </a>
+    <!--Link-->
+    <a href="">
+      <li>university of Ghana</li>
+    </a>
+    <li>Codeacademy</li>
+  </ul>
+  <p class="head">Experience</p>
+  <ul>
+    <li>Senior Product Manager</li>
+    <li>Product Manager</li>
+  </ul>
+  <p class="head">Extracurriculars</p>
+  <ul>
+    <li>Running Club</li>
+    <li>Photography Club</li>
+    <li>Reddit Book subreddit</li>
+  </ul>
+</div>
+<div class="right"></div>
+<div id="footer">
+  <h2 id="name">William</h2></div>
