--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div id="header"></div>
+<div id="header"><link rel="stylesheet" href="styles.css"></div>
 <div class="left"></div>
 <div class="stuff">
   <br><br>
