--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <div class="stuff">
   <br><br>
   <h1>William</h1>
-  <h2>Osei-Poku</h2>
+  <h1>Osei-Poku</h1>
   <hr />
   <br>
-  <p class="head">Interests</p>
+ <h2>Senior Product Manager </h2> 
+  <br>
+  <ul> 
+    <li> </li>XXXXXX Sample Street
+    <li>Bethesda, MD 20850</li>  
+    <li>Phone: XXXX XXXX XXXXX </li>
+    <li> Email: xxxxxx@email.com</li>
+  </h2>
+
+  <h3> <b>Professional Summary </b>
+    Experienced PMP with a background in law and 7+ years 
+    experience growing revenue for a Massachusetts-based 
+    electronics firm. Seeking to leverage leadership expertise as 
+    project manager for Paylocity. Guest speaker at the Northeast
+    Lean Conference in 2014
+    </h3>
+  <br>
+  <p class="head"><b> </b>Interests</p>
   <ul>
     <li>Reading</li>
     <li>Photography</li>
@@ -14,22 +31,20 @@
     <li>Product Development</li>
     <li>Technology</li>
   </ul>
-  <p class="head">Skills</p>
+  <p class="head"><b>Skills</p>
   <ul>
     <li>Web Design with HTML & CSS</li>
   </ul>
   <p class="head">Education</p>
   <ul>
-    <a href="">
+    
       <li>Drexel University</li>
-    </a>
-    <!--Link-->
-    <a href="">
-      <li>university of Ghana</li>
-    </a>
-    <li>Codeacademy</li>
+    
+       <li>university of Ghana</li>
+        <li>Codeacademy</li>
   </ul>
-  <p class="head">Experience</p>
+
+  <p class="head"><h3> <b> </b>work History </h3> </p>
   <ul>
     <li>Senior Product Manager</li>
     <li>Product Manager</li>
