verylatest branch merge

--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <div id="header"><link rel="stylesheet" href="styles.css"></div>
 <div class="left"></div>
-<div class="stuff">
-  <br><br>
-  <h1>William</h1>
-  <h1>Osei-Poku</h1>
-  <hr />
+<div> 
   <br>
+  <h1>William Osei-Poku</h1>
+  <p> Currently looking for new opportunities</p>
+    <hr />
+</br>
  <h2>Senior Product Manager </h2> 
+ <p> Agile Project Manager</p>
   <br>
   <ul> 
-    <li> </li>XXXXXX Sample Street
+    <li></li>XXXXXX Sample Street
     <li>Bethesda, MD 20850</li>  
     <li>Phone: XXXX XXXX XXXXX </li>
-    <li> Email: xxxxxx@email.com</li>
-  </h2>
+    <li>Email: xxxxxx@email.com</li>
+  </ul>
 
-  <h3> <b>Professional Summary </b>
+  <h3> <p> <b>Professional Summary </b>
     Experienced PMP with a background in law and 7+ years 
     experience growing revenue for a Massachusetts-based 
     electronics firm. Seeking to leverage leadership expertise as 
     project manager for Paylocity. Guest speaker at the Northeast
-    Lean Conference in 2014
+    Lean Conference in 2014 </p>
     </h3>
   <br>
-  <p class="head"><b> </b>Interests</p>
+  <b> </b>Interests</p>
   <ul>
     <li>Reading</li>
     <li>Photography</li>
