--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <li>Product Development</li>
     <li>Technology</li>
   </ul>
-  <p class="head"><b>Skills</p>
+  <p><b>Skills</p>
   <ul>
     <li>Web Design with HTML & CSS</li>
   </ul>
-  <p class="head">Education</p>
+  <p>Education</p>
   <ul>
     
       <li>Drexel University</li>
@@ -45,18 +45,18 @@
         <li>Codeacademy</li>
   </ul>
 
-  <p class="head"><h3> <b> </b>work History </h3> </p>
+  <p><h3> <b> </b>work History </h3> </p>
   <ul>
     <li>Senior Product Manager</li>
     <li>Product Manager</li>
   </ul>
-  <p class="head">Extracurriculars</p>
+  <p>Extracurriculars</p>
   <ul>
     <li>Running Club</li>
     <li>Photography Club</li>
     <li>Reddit Book subreddit</li>
   </ul>
 </div>
-<div class="right"></div>
+<div></div>
 <div id="footer">
   <h2 id="name">William</h2></div>
