--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     Lean Conference in 2014 </p>
     </h3>
   <br>
-  <b> </b>Interests</p>
+  </b>Interests</p>
   <ul>
     <li>Reading</li>
     <li>Photography</li>
@@ -45,7 +45,7 @@
         <li>Codeacademy</li>
   </ul>
 
-  <p><h3> <b> </b>work History </h3> </p>
+  <p><h3> Work History </h3> </p>
   <ul>
     <li>Senior Product Manager</li>
     <li>Product Manager</li>
@@ -57,6 +57,6 @@
     <li>Reddit Book subreddit</li>
   </ul>
 </div>
-<div></div>
+
 <div id="footer">
   <h2 id="name">William</h2></div>
