added strong stuff

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <div class="left"></div>
 <div> 
   <br>
-  <h1>William Osei-Poku</h1>
+  <h1><strong Osei-Poku </strong></h1>
   <p> Currently looking for new opportunities</p>
     <hr />
 </br>
@@ -16,7 +16,7 @@
     <li>Email: xxxxxx@email.com</li>
   </ul>
 
-  <h3> <p> <b>Professional Summary </b>
+  <h3> <p> <stong>Professional Summary </stong>
     Experienced PMP with a background in law and 7+ years 
     experience growing revenue for a Massachusetts-based 
     electronics firm. Seeking to leverage leadership expertise as 
@@ -32,7 +32,7 @@
     <li>Product Development</li>
     <li>Technology</li>
   </ul>
-  <p><b>Skills</p>
+  <p><strong>Skills </strong></p>
   <ul>
     <li>Web Design with HTML & CSS</li>
   </ul>
