--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <div id="header"><link rel="stylesheet" href="styles.css"></div>
 <div class="left"></div>
 <div> 
-  <br>
+  
+  <p> 
   <h1><strong Osei-Poku </strong></h1>
-  <p> Currently looking for new opportunities</p>
-    <hr />
-</br>
+  Currently looking for new opportunities</p>
+
+  <p>
  <h2>Senior Product Manager </h2> 
- <p> Agile Project Manager</p>
+ Agile Project Manager
+</p>
+
   <br>
   <ul> 
     <li></li>XXXXXX Sample Street
@@ -32,7 +35,7 @@
     <li>Product Development</li>
     <li>Technology</li>
   </ul>
-  <p><strong>Skills </strong></p>
+  <strong>Skills </strong>
   <ul>
     <li>Web Design with HTML & CSS</li>
   </ul>
