--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <div class="left"></div>
 <div> 
   
-  <p> 
+  <hr>
   <h1><strong Osei-Poku </strong></h1>
-  Currently looking for new opportunities</p>
+    <p> 
+  Currently looking for new opportunities
+  in business analysis, project management,
+  product management and statistics
+</p>
 
   <p>
  <h2>Senior Product Manager </h2> 
- Agile Project Manager
+ <p> Agile Project Manager</p>
+ 
 </p>
 
   <br>
