--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <div id="header"><link rel="stylesheet" href="styles.css"></div>
 <div class="left"></div>
-<div> 
+
   
   <hr>
-  <h1><strong Osei-Poku </strong></h1>
-    <p> 
+
+
+  <h1> <strong> </strong>William Osei-Poku </strong></h1>
+ <p>
   Currently looking for new opportunities
   in business analysis, project management,
   product management and statistics
