--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   product management and statistics
 </p>
 
+<hr>
   <p>
  <h2>Senior Product Manager </h2> 
  <p> Agile Project Manager</p>
  
 </p>
-
+<hr>
   <br>
   <ul> 
     <li></li>XXXXXX Sample Street
@@ -25,7 +26,7 @@
     <li>Phone: XXXX XXXX XXXXX </li>
     <li>Email: xxxxxx@email.com</li>
   </ul>
-
+<hr>
   <h3> <p> <stong>Professional Summary </stong>
     Experienced PMP with a background in law and 7+ years 
     experience growing revenue for a Massachusetts-based 
@@ -34,7 +35,8 @@
     Lean Conference in 2014 </p>
     </h3>
   <br>
-  </b>Interests</p>
+  <hr> 
+  <stong> Interests </stong>
   <ul>
     <li>Reading</li>
     <li>Photography</li>
@@ -42,11 +44,12 @@
     <li>Product Development</li>
     <li>Technology</li>
   </ul>
+  <hr>
   <strong>Skills </strong>
   <ul>
     <li>Web Design with HTML & CSS</li>
   </ul>
-  <p>Education</p>
+  <h3>Education</h3>
   <ul>
     
       <li>Drexel University</li>
@@ -54,12 +57,13 @@
        <li>university of Ghana</li>
         <li>Codeacademy</li>
   </ul>
-
+<hr>
   <p><h3> Work History </h3> </p>
   <ul>
     <li>Senior Product Manager</li>
     <li>Product Manager</li>
   </ul>
+  <hr>
   <p>Extracurriculars</p>
   <ul>
     <li>Running Club</li>
@@ -69,4 +73,4 @@
 </div>
 
 <div id="footer">
-  <h2 id="name">William</h2></div>
+  <h2 id="name">William Osei-Poku</h2></div>
