many more changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <hr>
   <br>
   <ul> 
-    <li></li>XXXXXX Sample Street
+    </li>XXXXXX Sample Street
     <li>Bethesda, MD 20850</li>  
     <li>Phone: XXXX XXXX XXXXX </li>
     <li>Email: xxxxxx@email.com</li>
@@ -58,13 +58,13 @@
         <li>Codeacademy</li>
   </ul>
 <hr>
-  <p><h3> Work History </h3> </p>
+  <p><h3> <strong>Work History </strong> </h3> </p>
   <ul>
     <li>Senior Product Manager</li>
     <li>Product Manager</li>
   </ul>
   <hr>
-  <p>Extracurriculars</p>
+  <p> <strong>Extracurriculars</strong></p>
   <ul>
     <li>Running Club</li>
     <li>Photography Club</li>
