--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <hr>
   <br>
   <ul> 
-    </li>XXXXXX Sample Street
+    <li>XXXXXX Sample Street</li>
     <li>Bethesda, MD 20850</li>  
     <li>Phone: XXXX XXXX XXXXX </li>
     <li>Email: xxxxxx@email.com</li>
@@ -64,7 +64,7 @@
     <li>Product Manager</li>
   </ul>
   <hr>
-  <p> <strong>Extracurriculars</strong></p>
+  <p> <strong> <h3>Extracurriculars </h3> </strong></p>
   <ul>
     <li>Running Club</li>
     <li>Photography Club</li>
