--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <div id="header"><link rel="stylesheet" href="styles.css"></div>
 <div class="left"></div>
 
-  
+  <strong> Resume </strong>
   <hr>
-
-
   <h1> <strong> </strong>William Osei-Poku </strong></h1>
  <p>
   Currently looking for new opportunities
