--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
   </ul>
 </div>
 
-<div id="footer">
-  <h2 id="name">William Osei-Poku</h2></div>
+div {text-align: center;}
+  <h6 id="name">William Osei-Poku</h6></div>
+  
