--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
     <li>Email: xxxxxx@email.com</li>
   </ul>
 <hr>
-  <h3> <p> <stong>Professional Summary </stong>
+  <h3><stong>Professional Summary </stong>   </h3>
+ <p> 
     Experienced PMP with a background in law and 7+ years 
     experience growing revenue for a Massachusetts-based 
     electronics firm. Seeking to leverage leadership expertise as 
     project manager for Paylocity. Guest speaker at the Northeast
-    Lean Conference in 2014 </p>
-    </h3>
+    Lean Conference in 2014 
+</p>
+  
   <br>
   <hr> 
   <stong> Interests </stong>
