--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </p>
 <hr>
   <br>
+<h3> <strong>Contact Information </strong> </h3>
   <ul> 
     <li>XXXXXX Sample Street</li>
     <li>Bethesda, MD 20850</li>  
@@ -36,7 +37,7 @@
   
   <br>
   <hr> 
-  <stong> Interests </stong>
+  <h3> <stong> Interests </stong> </h3>
   <ul>
     <li>Reading</li>
     <li>Photography</li>
