--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <div id="header"><link rel="stylesheet" href="styles.css"></div>
 <div class="left"></div>
 
-  <strong> Resume </strong>
+  <strong> <h4> Resume </h4> </strong>
   <hr>
   <h1> <strong> </strong>William Osei-Poku </strong></h1>
  <p>
   Currently looking for new opportunities
   in business analysis, project management,
-  product management and statistics
+  product management and statistics.
 </p>
 
 <hr>
@@ -26,7 +26,7 @@
     <li>Email: xxxxxx@email.com</li>
   </ul>
 <hr>
-  <h3><stong>Professional Summary </stong>   </h3>
+  <h3><stong>Professional Summary </stong>  </h3>
  <p> 
     Experienced PMP with a background in law and 7+ years 
     experience growing revenue for a Massachusetts-based 
@@ -50,7 +50,7 @@
   <ul>
     <li>Web Design with HTML & CSS</li>
   </ul>
-  <h3>Education</h3>
+ <strong> <h3>Education</h3> </strong>
   <ul>
     
       <li>Drexel University</li>
