--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<div id="header"><link rel="stylesheet" href="styles.css"></div>
+<!doctype html>
+<html class="no-js" lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>William Osei-Poku's Portfolio</title>
+  <meta name="description" content="Placeholder description for William's site">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="styles.css">
+
+  <meta name="theme-color" content="#ffffff">
+</head>
+
 <div class="left"></div>
 
   <strong> <h1> Resume </h1> </strong>
