--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <p>
   Currently looking for new opportunities
   in business analysis, project management,
-  product management and statistics.
+  product management and statistic and development
 </p>
 
 <hr>
