--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="styles.css">
+<link rel="icon" type="image/x-icon" href="favicon.png">
 
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -20,7 +21,7 @@
  <p>
   Currently looking for new opportunities
   in business analysis, project management,
-  product management and statistic and development
+  product management and statistics.
 </p>
 
 <hr>
