--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
   <br>
   <hr> 
   <h3> <stong> Interests </stong> </h3>
-  <ul>
+  <ol>
     <li>Reading</li>
     <li>Photography</li>
     <li>Gaming</li>
     <li>Product Development</li>
     <li>Technology</li>
-  </ul>
+  </ol type="1">
   <hr>
   <strong>Skills </strong>
   <ul>
